# pandas

./: .CITATION.cff.icloud  .MANIFEST.in.icloud  .binstar.yml  .clang-format  .codecov.yml.icloud  .coderabbit.yaml  .codespellignorelines  .coveragerc  .devcontainer.json  .drone.yml  .editorconfig  .environment.yml.icloud  .flake8.cython  .flake8.cython-header  .gitattributes  .gitconfig  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .libcst.codemod.yaml  .meson.build.icloud  .pep8speaks.yml  .pre-commit-config.yaml  .startup.ipy  .svnignore  .tool-versions  .travis.ylm  .travis.yml  0001-standardize-term-pandas-in-documentation.patch  0002-add-a-new-feature-sample-into-groupby.patch  010101101010100010101010000111010101002010101001010101010📀📡🎵🎤🎼🎩🎶🐼  :  =1.5  =6.46.1  AGENTS.md  AUTHORS.md  AfterMixed.txt  BENCHMARK_RESULTS.md  CITATION.cff  CITATION.md  (+283 more)
pandas/: .gitignore  .meson.build.icloud  .pre-commit-config.yaml  Dockerfile  __init__.py  _testing.py  _typing.py  _typing_extensions.py  _version.py  _version_meson.py  algos.pyx  conftest.py  hashtable.pxd  hashtable.pyx  index.pyx  info.py  json.py  lib.pxd  lib.py  lib.pyx  meson.build  msgpack.pyx  native.pxd  native.pyx  panda.py  parser.py  parser.pyx  pep.py  period.pyx  py.typed  pyproject.toml  reindex.py  setup.py  testing.py  tslib.pxd  tslib.py  tslib.pyx  typing.py  version.py  window.pyx
pandas/.github/: PULL_REQUEST_TEMPLATE.md
pandas/LICENSES/: HAVEN_LICENSE  PACKAGING_LICENSE
pandas/_build_utils/: gitversion.py
pandas/_config/: FirstDate.py  __init__.py  config.py  dates.py  display.py  localization.py
pandas/_core/: algorithms.py  api.py  apply.py  arraylike.py  base.py  common.py  config_init.py  construction.py  describe.py  frame.py  generic.py  index.py  indexing.py  missing.py  nanops.py  resample.py  sample.py  series.py  sorting.py
pandas/_diagnostics/: __init__.py  collector.py  introspect.py  phase_rules.py  report.py
pandas/_libs/: .algos.pxd.icloud  .algos_common_helper.pxi.in.icloud  .arrays.pxd.icloud  .byteswap.pyx.icloud  .dtypes.pxd.icloud  .hashtable.pyx.icloud  .index_class_helper.pxi.in.icloud  .indexing.pyx.icloud  .khash.pxd.icloud  .khash_for_primitive_helper.pxi.in.icloud  .lib.pxd.icloud  .missing.pxd.icloud  .ops_dispatch.pyx.icloud  .properties.pyx.icloud  .reshape.pyx.icloud  .util.pxd.icloud  CMakeLists.txt  __init__.py  _ujson.pyi  algos.pxd  algos.pyi  algos.pyx  algos_common_helper.pxi.in  algos_groupby_helper.pxi.in  algos_rank_helper.pxi.in  algos_take_helper.pxi.in  arrays.pxd  arrays.pyi  arrays.pyx  arrow_string_accumulations.cc  buffer.pyi  buffer.pyx  byteswap.pyx  cythonize_templates.py  double_double.pyx  dtypes.pxd  exceptions.pyx  free_threading_config.pxi.in  generate_templates.py  groupby.html  (+87 more)
pandas/_libs_numba/: algos.py  missing.py  util.py
pandas/_testing/: __init__.py  _hypothesis.py  _io.py  _network.py  _random.py  _warnings.py  asserters.py  compat.py  contexts.py  graphics.py  makers.py  network.py  roundtrips.py  size_tests.py
pandas/_vendored/: typing_extensions.py
pandas/api/: __init__.py  exceptions.py  extensions.py  internals.py  test.py
pandas/arrays/: __init__.py
pandas/asv_bench/: asv.conf.json
pandas/compat/: __init__.py  _compressors.py  _constants.py  _cpu.py  _optional.py  _utils.py  bz2.py  chainmap.py  chainmap_impl.py  compressors.py  lzma.py  matplotlib.py  numpy_compat.py  openpyxl_compat.py  pickle_compat.py  polars.py  pyarrow.py  scipy.py
pandas/computation/: __init__.py  align.py  api.py  common.py  delayed.py  engines.py  eval.py  expr.py  expressions.py  ops.py  pytables.py  scope.py
pandas/core/: Users:MarianaSouza:Code:pro.textClipping  __init__.py  _flags.py  _formats.py  _meta.py  accessor.py  accessors.py  aggregation.py  algorithms.py  api.py  apply.py  array.py  arraylike.py  axis_ops.py  base.py  bodo_patched.py  case_when.py  categorical.py  cloud_patch.py  col.py  collection.py  common.py  config.py  config_init.py  construction.py  convert.py  daterange.py  datetools.py  describe.py  dimensioned.py  dtypes.py  encoding.py  expressions.py  extensions.py  factor.py  fdpanel.py  flags.py  format.py  frame.py  frame_test_constructors.py  (+47 more)
pandas/diagnostics/: __init__.py  api.py  collector.py  report.py
pandas/errors/: __init__.py  cow.py
pandas/finance/: __init__.py  portstats.py
pandas/flake8/: cython.cfg
pandas/formats/: common.py  css.py  excel.py  format.py  printing.py  style.py
pandas/indexes/: api.py  base.py  category.py  frozen.py  interval.py  multi.py  numeric.py  range.py
pandas/internals/: config.pyx  numpy.pxd
pandas/io/: __init__.py  _plugin_loader.py  _util.py  api.py  apple_numbers.py  auth.py  clipboard.py  clipboards.py  common.py  data.py  date_converters.py  deltalake.py  excel.py  feather_format.py  ga.py  gbq.py  gcs.py  hdfs.py  html.py  iceberg.py  ipc.py  json.py  logfmt_format.py  meson.build  orc.py  packers.py  parquet.py  parsers.py  parsers.pyx  percentile_scaling.py  pickle.py  pytables.py  rdata.py  redis.py  s3.py  samples.py  sas.py  spss.py  sql.py  sql_legacy.py  (+8 more)
pandas/lib/: Makefile  bench.py  bench_sparse.py  build.py  rebuild.sh  setup.py  test_sparse.py
pandas/msgpack/: __init__.py  _packer.pyx  _unpacker.pyx  exceptions.py
pandas/pewdiepie/: api.py  converter.py  frequencies.py  holiday.py  offsets.py
pandas/plotting/: __init__.py  _compat.py  _converter.py  _core.py  _matplotlib.py  _misc.py  _style.py  _timeseries.py  _tools.py  api.py  base.py  compat.py  converter.py  core.py  misc.py  plotting.py  style.py  timeseries.py
pandas/protocol/: wrapper.py
pandas/rpy/: __init__.py  base.py  common.py  mass.py  vars.py
pandas/sandbox/: qtpandas.py
pandas/scripts/: check_for_inconsistent_pandas_namespace.py  check_test_naming.py  cibw_before_build.sh  cibw_before_build_windows.sh
pandas/sparse/: api.py  array.py  frame.py  list.py  panel.py  scipy_sparse.py  series.py  sparse.pyx
pandas/src/: Makefile  algos_common_helper.pxi  algos_common_helper.pxi.in  algos_groupby_helper.pxi  algos_groupby_helper.pxi.in  algos_take_helper.pxi  (+81 more)
(+15689 files in other folders)
